--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@
 
 #titulo{
     font-family: sans-serif;
-    color:blueviolet;
+    color:rgba(0, 0, 0, 0.719);
     margin-left: 7%;
 }
 
 #subtitulo{
     font-family: sans-serif;
-    color:blueviolet;
+    color:rgba(0, 0, 0, 0.719);
     margin-left: 10%;
 }
 
@@ -20,10 +20,10 @@ fieldset{
 }
 
 body{
-    background-color:aliceblue;
+    background-color:rgb(231, 231, 231);
     font-family: sans-serif;
     font-size: 1em;
-    color:darkslateblue;
+    color:rgba(0, 0, 0, 0.719);
     margin-left: 36%;
     margin-top: 2%;
     justify-content: center;
@@ -39,7 +39,7 @@ input, selct, button{
 
 .campo label{
     margin-bottom: 0.2em;
-    color:darkred;
+    color:rgba(0, 0, 0, 0.664);
     display: block;
 }
 
@@ -51,7 +51,7 @@ fieldset.grupo{
 .campo input[type="text"], .campo input[type="email"], .campo select {
     padding: 0.2em;
     border: 1px solid #59429d;
-    box-shadow: 2px 2px 2px rgb(0,0,0,0.2);
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
     display: block;
 }
 
@@ -59,4 +59,36 @@ fieldset.grupo{
     padding-right: 1em;
 }
 
-.campo input:focus
+.campo input:focus, .campo select:focus{
+    background: #E0E0F8;
+}
+
+.botao{
+    font-size: 1.2em;
+    background: #6f6f6f;
+    border: 0;
+    margin-bottom: 1em;
+    color: #ffff;
+    padding: 0.2em 0.6em;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+    position:absolute;
+    top: 150%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+}
+
+.botao:hover{
+    background: #6e6e6e;
+    box-shadow: inset 2px 2px 2px rgba(0,0,0,0.2);
+    text-shadow: none;
+}
+
+.botao, select{
+    cursor: pointer;
+}
+
+#check{
+    display: inline-block;
+}
