--- a/style.css
+++ b/style.css
@@ -28,11 +28,11 @@ fieldset{
 }
 
 fieldset.grupo{
-    float: left;
+    float: center;
     margin-right: 1em;
 }
 
-.campo input[type="text"], .campo input[type="password"]{
+.campo input[type="text"], .campo input[type="password"], .campo input[type="number"]{
     padding: 0.2em;
     border: 1px solid #59429d;
     box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
