--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ fieldset{
 }
 
 fieldset.grupo{
-    float: center;
+    align-items: center;
     margin-right: 1em;
 }
 
@@ -39,7 +39,13 @@ fieldset.grupo{
     display: block;
 }
 
-.botao{
+.botoes{
+    margin: 0px;
+    padding: 0px;
+}
+
+.botao_e{
+    float: left;
     font-size: 1.2em;
     background: #6f6f6f;
     border: 0;
@@ -47,12 +53,28 @@ fieldset.grupo{
     padding: 0.2em 0.6em;
     box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
     text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
-    position: absolute;
+    position:relative;
+    cursor: pointer;
+    display:inline;
+
+}
+
+.botao_d{
+    float:right;
+    margin: 0px 90px;
+    font-size: 1.2em;
+    background: #6f6f6f;
+    border: 0;
+    margin-bottom: 1em;
+    padding: 0.2em 0.6em;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+    position:fixed;
     cursor: pointer;
     display:inline;
 }
 
-.botao:hover{
+.botoes:hover{
     background: #8f8f8f;
    
 }
@@ -61,15 +83,10 @@ fieldset.grupo{
     display: flex;
     height: auto;
     bottom: 0;
+    margin-left: 0px;
 }
 
-.direita{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    text-align: center;
-}
+
 
 a{
     text-decoration: none;
