--- a/medion/css/style.css
+++ b/medion/css/style.css
@@ -51,7 +51,7 @@ body {
           transform: translateX(-50%);
   width: 50px;
   height: 5px;
-  background-color: #10e7f4;
+  background-color: #f0b00f;
 }
 
 /*header section*/
