--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@
     padding: 30px 0 30px 30px;
 }
 
-
+fieldset.grupo{
+    float: right;
+}
 
 div .u-image-1{
     display: block;
@@ -31,5 +33,5 @@ html, body{
 
 body{
     font-size: 14px;
-    line-
+
 }
