--- a/style.css
+++ b/style.css
@@ -8,8 +8,12 @@
     padding: 30px 0 30px 30px;
 }
 
+fieldset{
+    border: 0px;
+}
+
 fieldset.grupo{
-    float: right;
+    align-items: center;
 }
 
 div .u-image-1{
