--- a/css/style.css
+++ b/css/style.css
@@ -972,3 +972,13 @@ a:focus {
   margin-top: 30px;
 
 }
+
+
+
+#banner-2 img{
+  width: 430px;
+  height: 430px;
+  margin-top: 20px;
+  margin-left: 30px;
+
+}
