--- a/css/style.css
+++ b/css/style.css
@@ -440,7 +440,7 @@ a:focus {
 }
 
 .discount_section .detail-box h2 span {
-  color: #10e7f4;
+  color: #B8860B;
 }
 
 .discount_section .detail-box p {
@@ -450,8 +450,8 @@ a:focus {
 .discount_section .detail-box a {
   display: inline-block;
   padding: 10px 45px;
-  background-color: #10e7f4;
-  border: 1px solid #10e7f4;
+  background-color: #B8860B;;
+  border: 1px solid #B8860B;;
   color: #ffffff;
   margin-top: 35px;
 }
@@ -960,7 +960,7 @@ a:focus {
   align-items: center;
 }
 
-<<<<<<< HEAD
+HEAD
 /* centralização texto após login */
 .txt-sistema{
   text-align: center;
@@ -973,12 +973,11 @@ a:focus {
 
 }
 
-
-
 #banner-2 img{
-  width: 430px;
-  height: 430px;
+  width: 400px;
+  height: 500px;
+  margin-bottom: 10px;
   margin-top: 20px;
-  margin-left: 30px;
+  margin-left: 100px;
 
 }
