--- a/css/style.css
+++ b/css/style.css
@@ -981,3 +981,12 @@ HEAD
   margin-left: 100px;
 
 }
+
+#terra img{
+  width: 100%;
+  height: 500px;
+  margin-bottom: 10px;
+  margin-top: 20px;
+
+
+}
